Арифметическое кодирование на BigDecimal

--- a/app/doc_src/report.tex
+++ b/app/doc_src/report.tex
@@ -103,5 +103,5 @@
 О & 1.68750E-05 & 0.614465 & 0.614473
 \\ \hline \end{tabular}
 \end{center}
-Результат: 6144699999999996
+Результат: 61447
 \end{document}
