Форматирование шифрования LZ77

--- a/app/src/main/resources/latex_header.tex
+++ b/app/src/main/resources/latex_header.tex
@@ -3,6 +3,7 @@
 \usepackage[left=3cm,right=1.5cm,top=2cm,bottom=2cm]{geometry}
 \usepackage[T2A]{fontenc}
 \usepackage{graphicx}
+\usepackage[table]{xcolor}
 
 %Hyphenation rules
 %--------------------------------------
