--- a/app/src/main/resources/latex_header.tex
+++ b/app/src/main/resources/latex_header.tex
@@ -11,7 +11,19 @@
 \hyphenation{ма-те-ма-ти-ка вос-ста-нав-ли-вать}
 %--------------------------------------
 \usepackage[english, russian]{babel}
+
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
+
+
 \begin{document}
+
  
 \tableofcontents
 
